--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,6 @@
 :root{
 	--link-color : #333;
-	--link-hover-color : #4CAF50;
+	--link-selected-color : #4CAF50;
 	--link-hover-bg-color : #e7e7e7;
 }
 
@@ -8,8 +8,8 @@ a{
 	color: var(--link-color);
 	padding: .5rem;
 	border-radius: 5px;
-	&:hover{
-		color : var(--link-hover-color);
+	&.selected{
+		color : var(--link-selected-color);	
 	}
 }
 
